Fix side gap on iPad

--- a/bridgetown-website/frontend/styles/layout.scss
+++ b/bridgetown-website/frontend/styles/layout.scss
@@ -1,7 +1,9 @@
 .container {
-  @include mobile {
+  @include touch {
     /* This fixes a horizontal overscroll bug in iOS Safari */
     overflow: hidden;
+  }
+  @include mobile {
     main & {
       /* Padding here fixes missing box-shadows */
       padding-top: 2rem;
